@@ -6,23 +6,21 @@
 
 package com.offbytwo.jenkins.model;
 
-import static com.google.common.collect.Lists.transform;
-
-import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-
+import com.offbytwo.jenkins.client.util.EncodingUtils;
+import com.offbytwo.jenkins.helper.Range;
 import org.apache.http.HttpStatus;
 import org.apache.http.client.HttpResponseException;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
-import com.offbytwo.jenkins.client.util.EncodingUtils;
-import com.offbytwo.jenkins.helper.Range;
+import java.io.IOException;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+
+import static com.offbytwo.jenkins.helper.FunctionalHelper.SET_CLIENT;
+import static java.util.stream.Collectors.toList;
 
 public class JobWithDetails extends Job {
 
@@ -32,7 +30,7 @@ public class JobWithDetails extends Job {
 
     private boolean buildable;
 
-    private List<Build> builds;
+    private List<Build> builds = Collections.emptyList();
 
     private Build firstBuild;
 
@@ -95,12 +93,9 @@ public class JobWithDetails extends Job {
         if (builds == null) {
             return Collections.emptyList();
         } else {
-            return transform(builds, new Function<Build, Build>() {
-                @Override
-                public Build apply(Build from) {
-                    return buildWithClient(from);
-                }
-            });
+            return builds.stream()
+                    .map(s -> buildWithClient(s))
+                    .collect(toList());
         }
     }
 
@@ -129,12 +124,9 @@ public class JobWithDetails extends Job {
             if (builds == null) {
                 return Collections.emptyList();
             } else {
-                return transform(builds, new Function<Build, Build>() {
-                    @Override
-                    public Build apply(Build from) {
-                        return buildWithClient(from);
-                    }
-                });
+                return builds.stream()
+                        .map(s -> buildWithClient(s))
+                        .collect(toList());
             }
         } catch (HttpResponseException e) {
             // TODO: Thinks about a better handling if the job does not exist?
@@ -178,12 +170,9 @@ public class JobWithDetails extends Job {
             if (builds == null) {
                 return Collections.emptyList();
             } else {
-                return transform(builds, new Function<Build, Build>() {
-                    @Override
-                    public Build apply(Build from) {
-                        return buildWithClient(from);
-                    }
-                });
+                return builds.stream()
+                        .map(s -> buildWithClient(s))
+                        .collect(toList());
             }
         } catch (HttpResponseException e) {
             // TODO: Thinks about a better handline if the job does not exist?
@@ -428,7 +417,9 @@ public class JobWithDetails extends Job {
         if (downstreamProjects == null) {
             return Collections.emptyList();
         } else {
-            return transform(downstreamProjects, new JobWithClient());
+            return downstreamProjects.stream()
+                    .map(SET_CLIENT(this.client))
+                    .collect(toList());
         }
     }
 
@@ -440,7 +431,9 @@ public class JobWithDetails extends Job {
         if (upstreamProjects == null) {
             return Collections.emptyList();
         } else {
-            return transform(upstreamProjects, new JobWithClient());
+            return upstreamProjects.stream()
+                    .map(SET_CLIENT(this.client))
+                    .collect(toList());
         }
     }
 
@@ -452,31 +445,24 @@ public class JobWithDetails extends Job {
      * Get a build by the given buildNumber.
      * 
      * @param buildNumber The number to select the build by.
-     * @return The {@link Build} selected by the given buildnumber
-     * 
+     * @return The an Optional with the {@link Build} selected by the given buildnumber
+     *
      */
-    public Build getBuildByNumber(final int buildNumber) {
-
-        Predicate<Build> isMatchingBuildNumber = new Predicate<Build>() {
-
-            @Override
-            public boolean apply(Build input) {
-                return input.getNumber() == buildNumber;
-            }
-        };
-
-        Optional<Build> optionalBuild = Iterables.tryFind(builds, isMatchingBuildNumber);
-        // TODO: Check if we could use Build#NO...instead of Null?
-        return optionalBuild.orNull() == null ? null : buildWithClient(optionalBuild.orNull());
+    public Optional<Build> getBuildByNumber(final int buildNumber) {
+        return builds.stream().filter(isBuildNumberEqualTo(buildNumber)).findFirst();
     }
-
-    private class JobWithClient implements Function<Job, Job> {
-        @Override
-        public Job apply(Job job) {
-            job.setClient(client);
-            return job;
-        }
-    }
+    
+    /**
+     * Get a module of a {@link Job}
+     * 
+     * @param moduleName name of the {@link MavenModule}
+     * @return The {@link MavenModuleWithDetails} selected by the given module name
+     * @throws java.io.IOException in case of errors.
+     * 
+     */    
+    public MavenModuleWithDetails getModule(String moduleName) throws IOException {
+        return client.get(getUrl() + moduleName, MavenModuleWithDetails.class);
+    }    
 
     /**
      * Empty description to be used for {@link #updateDescription(String)} or
@@ -492,8 +478,8 @@ public class JobWithDetails extends Job {
      *            {@link #EMPTY_DESCRIPTION}.
      * @throws IOException in case of errors.
      */
-    public void updateDescription(String description) throws IOException {
-        updateDescription(description, false);
+    public JobWithDetails updateDescription(String description) throws IOException {
+        return updateDescription(description, false);
     }
 
     /**
@@ -505,10 +491,14 @@ public class JobWithDetails extends Job {
      * @param crumbFlag <code>true</code> or <code>false</code>.
      * @throws IOException in case of errors.
      */
-    public void updateDescription(String description, boolean crumbFlag) throws IOException {
+    public JobWithDetails updateDescription(String description, boolean crumbFlag) throws IOException {
         Objects.requireNonNull(description, "description is not allowed to be null.");
-        ImmutableMap<String, String> params = ImmutableMap.of("description", description);
+        //JDK9+
+        // Map.of(...);
+        Map<String, String> params = new HashMap<>();
+        params.put("description", description);
         client.post_form(this.getUrl() + "/submitDescription?", params, crumbFlag);
+        return this;
     }
 
     /**
@@ -516,8 +506,8 @@ public class JobWithDetails extends Job {
      * 
      * @throws IOException in case of errors.
      */
-    public void clearDescription() throws IOException {
-        updateDescription(EMPTY_DESCRIPTION);
+    public JobWithDetails clearDescription() throws IOException {
+        return updateDescription(EMPTY_DESCRIPTION);
     }
 
     /**
@@ -526,8 +516,8 @@ public class JobWithDetails extends Job {
      * @param crumbFlag <code>true</code> or <code>false</code>.
      * @throws IOException in case of errors.
      */
-    public void clearDescription(boolean crumbFlag) throws IOException {
-        updateDescription(EMPTY_DESCRIPTION, crumbFlag);
+    public JobWithDetails clearDescription(boolean crumbFlag) throws IOException {
+        return updateDescription(EMPTY_DESCRIPTION, crumbFlag);
     }
 
     @Override
